[package]
name = "rnbo-runner-panel"
version = "2.2.0-beta.14"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
futures-util = "0.3.31"
home = "0.5.12"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
reqwest-websocket = "0.5.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rosc = "0.11.4"
serde = { version = "1.0.228", features = ["std", "derive" ] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["time"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
tempdir = "0.3.7"
